--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,11 @@
 			"label": "make editor",
 			"command": "make",
 			"args": ["editor"]
+		},
+		{
+			"label": "make codegen",
+			"command": "make",
+			"args": ["codegen"]
 		}
 	]
 }
