Add all Makefile tasks

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,14 +4,54 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "make run",
+			"command": "make",
+			"args": ["run"]
+		},
+		{
 			"label": "make editor",
 			"command": "make",
 			"args": ["editor"]
 		},
 		{
+			"label": "make serve",
+			"command": "make",
+			"args": ["serve"]
+		},
+		{
+			"label": "make all",
+			"command": "make",
+			"args": ["all"]
+		},
+		{
+			"label": "make love",
+			"command": "make",
+			"args": ["love"]
+		},
+		{
+			"label": "make web",
+			"command": "make",
+			"args": ["love"]
+		},
+		{
+			"label": "make assets",
+			"command": "make",
+			"args": ["assets"]
+		},
+		{
+			"label": "make compile",
+			"command": "make",
+			"args": ["compile"]
+		},
+		{
 			"label": "make codegen",
 			"command": "make",
 			"args": ["codegen"]
-		}
+		},
+		{
+			"label": "make clean",
+			"command": "make",
+			"args": ["clean"]
+		},
 	]
 }
