--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-*.tl linguist-language=lua linguist-detectable
-lib/** linguist-vendored
-src/typedef.tl linguist-generated
-types/** linguist-documentation
-/asset binary
+*.tl            linguist-language=lua
+/lib/**         linguist-vendored
+/src/typedef.tl linguist-generated
+/types/**       linguist-documentation
+/asset/**       linguist-generated
